# ChatLLM

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/chatllm/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/chatllm/: ChatScreen.kt  MainActivity.kt  Test.kt  permission.java
app/src/main/java/com/example/chatllm/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/chatllm/: ExampleUnitTest.kt
cpp/: CMakeLists.txt  buildMNNarm64.sh  buildrobot.sh  model.cpp  model.hpp  native.cpp
gradle/wrapper/: gradle-wrapper.properties
